2010-05-09 Markus Malkusch <markus@malkusch.de>

    * classes/parser/AutoloaderFileParser_RegExp (AutoloaderFileParser_RegExp::getClassesInSource()):
    AutoloaderFileParser_RegExp has support for Namespaces.

2010-05-08 Markus Malkusch <markus@malkusch.de>

    * classes/parser/AutoloaderFileParser_Tokenizer (AutoloaderFileParser_Tokenizer::getClassesInSource()):
    The Autoloader has support for Namespaces. Only the
    AutoloaderFileParser_Tokenizer is able to determine the namespace of a
    class. The AutoloaderFileParser_RegExp is yet not able to recognize
    namespaces. You can use any possible namespace declaration. The
    AutoloaderFileParser_Tokenizer can handle the braket syntax as well as the
    non braket syntaxt. Multiple namespace declarations in one file are no
    problem.

2010-04-25 Markus Malkusch <markus@malkusch.de>

    * classes/index/filter/AutoloaderIndexFilter_RelativePath.php (AutoloaderIndexFilter_RelativePath):
    An AutoloaderIndex can filter the paths which are stored or read with
    an AutoloaderIndexFilter. The AutoloaderIndexFilter_RelativePath stores
    relative paths in an index. With this filter and Autoloader::buildIndex()
    you can build an index in your developement environment and deploy the
    built index into your productive environment.

2010-04-21 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::buildIndex()):
    Autoloader::buildIndex() iterates through all files in the class path and
    builds an index for all found classes. This index is still not really
    usable for deployment as it contains absolute paths.

    * classes/parser/AutoloaderFileParser.php (AutoloaderFileParser::getClassesInFile()):
    The Autoloader parser is able to return the list of found classes in a
    parsed file. This will be used in future to build an index before deployment
    in a productive environment.

2010-04-16 Markus Malkusch <markus@malkusch.de>

    * Autoloader.php (Autoloader.php):